# nlp_api

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
nlp_api/: pyproject.toml
nlp_api/alembic/versions/: 2d614148ea4b_.py  82e0ddef354a_.py  b35f7255b4cc_.py  e3102132771e_.py  ea6a525c017c_.py
nlp_api/app/api/api_v1/: api.py
nlp_api/app/api/api_v1/endpoints/: inference.py  role.py  text_inference.py  user.py  zeroshot_inference.py
nlp_api/app/crud/: __init__.py  base_sqlmodel.py  crud_inference.py  crud_text_inference.py  crud_user.py  crud_zeroshot_inference.py
nlp_api/app/db/: async_sqlmodel.py
nlp_api/app/models/: __init__.py  inference.py  role.py  text_inference.py  user.py  zeroshot_inference.py
nlp_api/app/schemas/: common.py  inference.py  text_inference.py  user.py  zeroshot_inference.py
nlp_api/app/utils/: nlp.py  text_nlp.py  zeroshot_nlp.py
